sample/retrieveUnpackaged/objects/Event_Message_Template__c.object
<CustomObject>
    <fields>
        <fullName>IVR_Message__c</fullName>
        <label>IVR Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alternative Water Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event Message Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Type Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Messages Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>